--- a/css/index.css
+++ b/css/index.css
@@ -52,7 +52,6 @@ body {
   -moz-user-select: none;
   -webkit-user-select: none;
   -ms-user-select: none;
-  -khtml-user-select: none;
   user-select: none;
   position: relative; }
 
@@ -63,20 +62,34 @@ body, html {
   font-family: "pingfang"; }
 
 .header-box {
+  position: -webkit-sticky;
   position: sticky;
   top: 20px;
+  -webkit-transition: all 0.3s;
   transition: all 0.3s;
   width: 100%;
   min-width: 1000px;
   height: 50px;
+  -webkit-transition: all 0.45s;
   transition: all 0.45s;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: space-between;
-  align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   z-index: 999;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   padding: 0px 100px; }
   .header-box.header-black {
     background-color: rgba(0, 0, 0, 0.5); }
@@ -98,6 +111,8 @@ body, html {
     height: 16px;
     display: none; }
   .header-box nav.nav-box {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex; }
     .header-box nav.nav-box a {
       display: block;
@@ -107,8 +122,12 @@ body, html {
       text-decoration: none;
       font-size: 16px; }
   .header-box .operate-box {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center; }
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center; }
     .header-box .operate-box .login {
       color: #fff;
       text-decoration: none;
@@ -149,15 +168,18 @@ body, html {
   position: fixed;
   top: 0px;
   left: 50%;
-  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
   z-index: 1; }
   .box01 .description {
     position: absolute;
     left: 50%;
-    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
     color: #fff;
     text-align: center;
     top: 25%;
+    -webkit-transition: all 0.3s;
     transition: all 0.3s; }
     .box01 .description dl {
       margin-bottom: 50px; }
@@ -177,7 +199,8 @@ body, html {
       font-size: 20px;
       border-radius: 30px;
       text-decoration: none;
-      box-sizing: border-box; }
+      -webkit-box-sizing: border-box;
+              box-sizing: border-box; }
 
 .box02 {
   width: calc(100vw - 17px);
@@ -187,6 +210,7 @@ body, html {
   background-color: #fff;
   position: relative;
   z-index: 2;
+  -webkit-transition: top .5s;
   transition: top .5s; }
   .box02 .animation-box {
     position: absolute;
@@ -219,12 +243,15 @@ body, html {
         background-size: cover;
         background-position: center;
         opacity: 0;
+        -webkit-transition: opacity 0.3s;
         transition: opacity 0.3s; }
       .box02 .animation-box .light-box .description {
         position: absolute;
         left: 50%;
-        transform: translateX(-50%);
+        -webkit-transform: translateX(-50%);
+                transform: translateX(-50%);
         color: #fff;
+        -webkit-transition: all 0.3s;
         transition: all 0.3s;
         text-align: center;
         top: 40%;
@@ -240,6 +267,7 @@ body, html {
       position: absolute;
       top: 0;
       left: 0;
+      -webkit-transition: width 0.3s;
       transition: width 0.3s;
       overflow: hidden;
       z-index: 2; }
@@ -258,6 +286,7 @@ body, html {
           left: 0%;
           opacity: 0;
           color: #fff;
+          -webkit-transition: all 0.3s;
           transition: all 0.3s; }
           .box02 .animation-box .slide-right-box .slide-right-img dl.description dt {
             font-size: 44px;
@@ -272,6 +301,7 @@ body, html {
       top: 100%;
       left: 0;
       background-color: aquamarine;
+      -webkit-transition: all 0.3s;
       transition: all 0.3s;
       overflow: hidden;
       z-index: 2; }
@@ -290,6 +320,7 @@ body, html {
           left: 8%;
           opacity: 0;
           color: #fff;
+          -webkit-transition: all 0.3s;
           transition: all 0.3s; }
           .box02 .animation-box .slide-top-box .slide-top-img .description dt {
             font-size: 44px;
@@ -305,6 +336,7 @@ body, html {
   background-color: #fff;
   position: relative;
   z-index: 2;
+  -webkit-transition: top .5s;
   transition: top .5s; }
   .box03 .animation-box {
     width: calc(100vw - 18px);
@@ -315,10 +347,12 @@ body, html {
       position: absolute;
       top: 50%;
       left: 50%;
-      transform: translate(-50%, -50%);
+      -webkit-transform: translate(-50%, -50%);
+              transform: translate(-50%, -50%);
       width: calc(100% - 100px);
       height: calc(100% - 100px);
       opacity: 0;
+      -webkit-transition: all 0.3s;
       transition: all 0.3s; }
       .box03 .animation-box .parameter-box .img-back {
         width: 100%;
@@ -331,9 +365,11 @@ body, html {
           position: absolute;
           top: 50%;
           left: 50%;
-          transform: translateX(-50%);
+          -webkit-transform: translateX(-50%);
+                  transform: translateX(-50%);
           text-align: center;
           opacity: 0;
+          -webkit-transition: all 0.3s;
           transition: all 0.3s; }
           .box03 .animation-box .parameter-box .img-back .title-box h6.title {
             font-size: 40px;
@@ -343,19 +379,36 @@ body, html {
             font-size: 14px;
             color: #ffffff; }
       .box03 .animation-box .parameter-box .value {
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        flex-direction: row;
-        flex-wrap: nowrap;
-        justify-content: center;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: row;
+                flex-direction: row;
+        -ms-flex-wrap: nowrap;
+            flex-wrap: nowrap;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
         margin-top: 40px;
         font-size: 16px;
         opacity: 0;
+        -webkit-transition: all 0.3s;
         transition: all 0.3s; }
         .box03 .animation-box .parameter-box .value ul {
+          display: -webkit-box;
+          display: -ms-flexbox;
           display: flex;
-          flex-direction: row;
-          flex-wrap: nowrap;
-          justify-content: center; }
+          -webkit-box-orient: horizontal;
+          -webkit-box-direction: normal;
+              -ms-flex-direction: row;
+                  flex-direction: row;
+          -ms-flex-wrap: nowrap;
+              flex-wrap: nowrap;
+          -webkit-box-pack: center;
+              -ms-flex-pack: center;
+                  justify-content: center; }
           .box03 .animation-box .parameter-box .value ul li {
             text-align: center;
             padding: 0 20px;
@@ -384,7 +437,8 @@ body, html {
           font-size: 18px;
           text-decoration: none;
           border-radius: 30px;
-          box-sizing: border-box;
+          -webkit-box-sizing: border-box;
+                  box-sizing: border-box;
           margin-left: 30px; }
     .box03 .animation-box .slide-01-box {
       overflow: hidden;
@@ -393,6 +447,7 @@ body, html {
       position: absolute;
       bottom: 0;
       display: none;
+      -webkit-transition: all 0.3s;
       transition: all 0.3s; }
       .box03 .animation-box .slide-01-box .slide-01 {
         width: 100vw;
@@ -404,7 +459,8 @@ body, html {
           width: 50%;
           top: 57%;
           left: 50%;
-          transform: translate(-50%, -50%); }
+          -webkit-transform: translate(-50%, -50%);
+                  transform: translate(-50%, -50%); }
         .box03 .animation-box .slide-01-box .slide-01 .img-back {
           width: 100%;
           height: 100%;
@@ -416,15 +472,25 @@ body, html {
           position: absolute;
           top: 70%;
           left: 50%;
-          transform: translate(-50%, -50%);
+          -webkit-transform: translate(-50%, -50%);
+                  transform: translate(-50%, -50%);
+          display: -webkit-box;
+          display: -ms-flexbox;
           display: flex;
-          flex-direction: row;
-          flex-wrap: nowrap;
-          justify-content: space-between;
+          -webkit-box-orient: horizontal;
+          -webkit-box-direction: normal;
+              -ms-flex-direction: row;
+                  flex-direction: row;
+          -ms-flex-wrap: nowrap;
+              flex-wrap: nowrap;
+          -webkit-box-pack: justify;
+              -ms-flex-pack: justify;
+                  justify-content: space-between;
           color: #000000;
           font-size: 18px;
           font-weight: bold;
           opacity: 0;
+          -webkit-transition: all 0.3s;
           transition: all 0.3s; }
           .box03 .animation-box .slide-01-box .slide-01 .name-box img.logo {
             width: 60%; }
@@ -435,6 +501,7 @@ body, html {
       position: absolute;
       bottom: 0;
       display: none;
+      -webkit-transition: all 0.3s;
       transition: all 0.3s;
       background-color: #fff; }
       .box03 .animation-box .slide-02-box .slide-02 {
@@ -447,7 +514,8 @@ body, html {
           width: 50%;
           top: 57%;
           left: 50%;
-          transform: translate(-50%, -50%); }
+          -webkit-transform: translate(-50%, -50%);
+                  transform: translate(-50%, -50%); }
         .box03 .animation-box .slide-02-box .slide-02 .img-back {
           width: 100%;
           height: 100%;
@@ -459,15 +527,25 @@ body, html {
           position: absolute;
           top: 70%;
           left: 50%;
-          transform: translate(-50%, -50%);
+          -webkit-transform: translate(-50%, -50%);
+                  transform: translate(-50%, -50%);
+          display: -webkit-box;
+          display: -ms-flexbox;
           display: flex;
-          flex-direction: row;
-          flex-wrap: nowrap;
-          justify-content: space-between;
+          -webkit-box-orient: horizontal;
+          -webkit-box-direction: normal;
+              -ms-flex-direction: row;
+                  flex-direction: row;
+          -ms-flex-wrap: nowrap;
+              flex-wrap: nowrap;
+          -webkit-box-pack: justify;
+              -ms-flex-pack: justify;
+                  justify-content: space-between;
           color: #7e8389;
           font-size: 18px;
           font-weight: bold;
           opacity: 0;
+          -webkit-transition: all 0.3s;
           transition: all 0.3s; }
           .box03 .animation-box .slide-02-box .slide-02 .name-box img.logo {
             width: 60%; }
@@ -483,7 +561,9 @@ body, html {
         width: 50%;
         top: 57%;
         left: 50%;
-        transform: translate(-50%, -50%);
+        -webkit-transform: translate(-50%, -50%);
+                transform: translate(-50%, -50%);
+        -webkit-transition: all 0.3s;
         transition: all 0.3s; }
       .box03 .animation-box .deploy-bok .deploy {
         position: relative;
@@ -491,6 +571,7 @@ body, html {
         margin: 0 auto;
         width: 80%;
         opacity: 0;
+        -webkit-transition: all 0.3s;
         transition: all 0.3s; }
         .box03 .animation-box .deploy-bok .deploy h6.title {
           font-size: 35px;
@@ -498,13 +579,22 @@ body, html {
           text-align: center;
           margin: 5% 0 0 0; }
         .box03 .animation-box .deploy-bok .deploy .options-box {
+          display: -webkit-box;
+          display: -ms-flexbox;
           display: flex;
-          flex-direction: row;
-          flex-wrap: nowrap;
-          justify-content: space-between;
+          -webkit-box-orient: horizontal;
+          -webkit-box-direction: normal;
+              -ms-flex-direction: row;
+                  flex-direction: row;
+          -ms-flex-wrap: nowrap;
+              flex-wrap: nowrap;
+          -webkit-box-pack: justify;
+              -ms-flex-pack: justify;
+                  justify-content: space-between;
           margin-top: 3%; }
           .box03 .animation-box .deploy-bok .deploy .options-box .unit-box {
-            box-sizing: border-box;
+            -webkit-box-sizing: border-box;
+                    box-sizing: border-box;
             border: 3px solid #203864;
             padding: 25px 35px;
             border-radius: 20px;
@@ -549,7 +639,8 @@ body, html {
           color: #203864;
           border-radius: 30px;
           display: block;
-          box-sizing: border-box;
+          -webkit-box-sizing: border-box;
+                  box-sizing: border-box;
           text-decoration: none;
           margin: 6% auto 0; }
 
@@ -560,6 +651,7 @@ body, html {
   background-color: #fff;
   position: relative;
   z-index: 2;
+  -webkit-transition: top .5s;
   transition: top .5s; }
   .box04 .animation-box {
     width: calc(100vw - 18px);
@@ -581,15 +673,18 @@ body, html {
       background-size: cover;
       background-position: center;
       opacity: 0;
+      -webkit-transition: all 0.3s;
       transition: all 0.3s; }
       .box04 .animation-box .dim .describe {
         color: #ffffff;
         position: absolute;
         top: 36%;
         left: 50%;
-        transform: translateX(-50%);
+        -webkit-transform: translateX(-50%);
+                transform: translateX(-50%);
         line-height: 23px;
         opacity: 0;
+        -webkit-transition: all 0.3s;
         transition: all 0.3s;
         text-align: center; }
         .box04 .animation-box .dim .describe dt {
@@ -605,15 +700,26 @@ body, html {
   background-color: #fff;
   position: relative;
   z-index: 2;
+  -webkit-transition: top .5s;
   transition: top .5s;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: flex-end;
-  box-sizing: border-box;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   padding: 35px; }
   .box05 dl.title-box {
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     position: absolute;
     color: #3a3a3a;
     top: 120px;
@@ -627,7 +733,8 @@ body, html {
       margin-top: 50px; }
   .box05 .img-box {
     width: 50%;
-    box-sizing: border-box; }
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box; }
     .box05 .img-box img {
       width: 100%;
       margin-bottom: 20px; }
@@ -651,7 +758,8 @@ body, html {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
     opacity: 0; }
     .box06 .title-box dt {
       font-size: 44px;
@@ -664,14 +772,24 @@ body, html {
     position: absolute;
     left: 0;
     bottom: -160px;
+    -webkit-transition: 0.7s all;
     transition: 0.7s all;
     background: rgba(32, 56, 100, 0.7);
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     text-align: center;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-transition: all 0.3s;
     transition: all 0.3s; }
     .box06 .icon-box ul {
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex; }
       .box06 .icon-box ul li {
         text-align: center;
@@ -714,30 +832,43 @@ body, html {
   position: relative;
   z-index: 2;
   padding: 20px;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: space-between; }
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between; }
   .box07 .img-box {
     position: relative;
     width: calc(50% - 10px);
     overflow: hidden; }
     .box07 .img-box:hover img {
-      transform: translate(-50%, -50%) scale(1.1); }
+      -webkit-transform: translate(-50%, -50%) scale(1.1);
+              transform: translate(-50%, -50%) scale(1.1); }
     .box07 .img-box img {
       position: absolute;
       width: 120%;
       min-height: 100%;
       top: 50%;
       left: 50%;
-      transform: translate(-50%, -50%);
+      -webkit-transform: translate(-50%, -50%);
+              transform: translate(-50%, -50%);
+      -webkit-transition: all 0.3s;
       transition: all 0.3s; }
     .box07 .img-box span {
       position: absolute;
       top: 50%;
       left: 50%;
-      transform: translate(-50%, -50%);
+      -webkit-transform: translate(-50%, -50%);
+              transform: translate(-50%, -50%);
       color: #fff;
       font-size: 30px; }
 
@@ -748,12 +879,23 @@ body, html {
   background-color: #fff;
   position: relative;
   z-index: 2;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: space-between;
-  align-items: center;
-  box-sizing: border-box;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   padding: 0 30px; }
   .footer-box .description {
     font-size: 12px;
